[gd_scene load_steps=10 format=3 uid="uid://cjpwowr0mt3cg"]

[ext_resource type="Script" path="res://src/GameBoard/EnergyDisplay.gd" id="1_n5fa2"]
[ext_resource type="Texture2D" uid="uid://c2r5l4ypyweyw" path="res://assets/card-components/energy-black.png" id="2_1ngy7"]
[ext_resource type="Texture2D" uid="uid://dsg574qdnumdc" path="res://assets/card-components/health-red.png" id="3_hho88"]
[ext_resource type="LabelSettings" uid="uid://bx7tppt0u01gu" path="res://src/Themes/KnowledgeDisplayNumbers.tres" id="3_uhjq1"]
[ext_resource type="StyleBox" uid="uid://by0rvqvrgari" path="res://src/Themes/PanelBorder.tres" id="4_djh1v"]
[ext_resource type="Texture2D" uid="uid://wxlj4o3qv3ky" path="res://icon.svg" id="4_qragl"]
[ext_resource type="Script" path="res://src/GameBoard/PlayerAvatar.gd" id="5_gfaja"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_e1o3c"]
texture = ExtResource("2_1ngy7")
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rt85k"]
texture = ExtResource("3_hho88")

[node name="EnergyDisplay" type="HBoxContainer"]
offset_right = 200.0
offset_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
script = ExtResource("1_n5fa2")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="EnergyLabel" type="Label" parent="AspectRatioContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/normal = SubResource("StyleBoxTexture_e1o3c")
text = "3/5"
label_settings = ExtResource("3_uhjq1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AvatarContainer" type="PanelContainer" parent="."]
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = ExtResource("4_djh1v")
script = ExtResource("5_gfaja")

[node name="Avatar" type="TextureRect" parent="AvatarContainer"]
layout_mode = 2
texture = ExtResource("4_qragl")
expand_mode = 3

[node name="AspectRatioContainer2" type="AspectRatioContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="HealthLabel" type="Label" parent="AspectRatioContainer2"]
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/normal = SubResource("StyleBoxTexture_rt85k")
text = "30"
label_settings = ExtResource("3_uhjq1")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="gui_input" from="AvatarContainer" to="AvatarContainer" method="_on_gui_input"]
[connection signal="mouse_entered" from="AvatarContainer" to="AvatarContainer" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="AvatarContainer" to="AvatarContainer" method="_on_mouse_exited"]
